--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
-openai>=1.0.0
-pandas==2.1.3
-numpy==1.25.2
-matplotlib==3.8.2
-requests==2.31.0
-beautifulsoup4==4.12.2
-lxml==4.9.3
+openai==1.51.0
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.8.4
+requests==2.32.3
+beautifulsoup4==4.12.3
+lxml==5.2.2
 readability-lxml==0.8.1
-python-dotenv==1.0.0
-httpx>=0.24.0
+python-dotenv==1.0.1
+httpx==0.27.0
