--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ python-multipart==0.0.6
 openai==1.51.0
 requests==2.32.3
 beautifulsoup4==4.12.3
-lxml==5.2.2
+lxml[html_clean]==5.2.2
 readability-lxml==0.8.1
 python-dotenv==1.0.1
 httpx==0.27.0
